--- a/geral.css
+++ b/geral.css
@@ -1,10 +1,17 @@
+/*Update de Fontes*/
 @font-face {
 	font-family: batman-forever;
 	src: local(batman-forever),url(Fonte/batman_forever/batmfa__.ttf)
 }
 
+@font-face{
+	font-family: champagne;
+	src: local(champagne),url(Fonte/champagne_limousines/Champagne_Limousines.ttf)
+}
+
+
 #topo {
-	background: gray;
+	background: #00a8cc;
 	width: 800px;
 	margin-left:auto;
 	margin-right:auto;
@@ -15,53 +22,74 @@
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
 }
+/* CSS da Barra de Navegação*/
+
+#barradenavegacao ul{
+	margin: 0;
+	padding: 0;
+	font-family: champagne;
+	}
 
 #barradenavegacao li{ 
-	
-	list-style: none;
 	display: inline-block;
-	padding: 14px 16px;
-	background-color: gray;
+	padding: 12px 0px; 
+	width: 16.26%;
+	margin: 0;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 #barradenavegacao li:hover{
 	background-color: #C71585;
 }
+/* logo */
 
 #logo{
 	font-family:batman-forever;
+	color:white;
 }
 
-#PlanoDeFundo{
-	background-color: black;
-}
+/*Barra de Pesquisa*/
 
 #pesquisa{
 	position: absolute;
 	top:45px;
-	right:300px;
+	right:273px;
+	width: 240px;
+	
 }
 
 #barradepesquisa{
-	border-bottom-left-radius: 8px;
 	border-top-left-radius: 8px;
-}
-
-
-#botao1{
-	font-family: batman-forever;
-	color:white;
-	background-color: gray;
-	border-top-right-radius: 8px;
 	border-bottom-right-radius: 8px;
-	transition-duration: 0.4s;
+	width:130px;
+	transition: width 0.4s ease-in-out;
+	font-family: champagne;
 }
 
-#botao1:hover{
-	background-color: #C71585;
+#barradepesquisa:focus{
+	width:80%;
 }
+
+#barradenavegacao li:first-child:hover{
+	border-bottom-left-radius: 8px;
+}
+
+#barradenavegacao li:last-child:hover{
+	border-bottom-right-radius: 8px;
+}
+
+/*outros*/
 
 a{
 	color: white;
 	text-decoration: none;
+}
+
+nav{
+	width: 820px;
+	margin: 0 auto;
+	background-color: #00a8cc ;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
 }
