--- a/gallery.theme.css
+++ b/gallery.theme.css
@@ -18,7 +18,7 @@
   height: 400px;
   overflow: hidden;
   text-align: center;
-  background: white;
+  background: #27496d;
 }
 .gallery .controls {
   position: absolute;
